[package]
name = "tun"
version = "0.1.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2.62"
async-std = { git = "https://github.com/gfreezy/async-std", rev = "5d7e1ab8"}
mio = "0.6.19"
sysconfig = { path = "../seeker/sysconfig" }
tokio = {version = "0.2.13", features = ["full"] }
futures-core = "0.3.4"

[dependencies.smoltcp]
git = "https://github.com/gfreezy/smoltcp"
rev = "ef17f0b"
default-features = false
features = [
	"std", "log",
	"proto-ipv4",
	"socket-udp",
	"socket-tcp",
	"phy-raw_socket",
	"ethernet",
]
